Revision history for Perl extension Thrift::XS.

1.02
        - Large performance boost by using direct buffer operations if
          also using XS::MemoryBuffer.

1.01    2011-02-24
        - Added compact protocol support.
        - Documented the rest of the XS modules.
        - Fixed bug in writeBool that caused it to always write a true value.
        - Fixed bug in readFieldBegin where T_STOP was not handled properly.

1.00    2011-02-22
        - Initial release.