@@ -3,6 +3,8 @@ Revision history for Perl extension Thrift::XS.
 1.02
         - Large performance boost by using direct buffer operations if
           also using XS::MemoryBuffer.
+        - Added return values for compatibility for all methods in BinaryProtocol
+          (Wang Lam).
 
 1.01    2011-02-24
         - Added compact protocol support.
